2010-07-31  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/vte.c:
   Fix build with GTK 2.8, use the stock icon name directly instead
   of the macro. Though, the icon is still missing for GTK 2.8.


2010-07-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/keybindings.c, src/vte.c, src/vte.h:
   Implement 'Select All' for the VTE widget.


2010-07-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * geany.nsi:
   Fix missing template files in the Windows installer.


2010-07-18  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/filetypes.python:
   Update list of Python builtins, based on Python 2.6.


2010-07-13  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/filetypes.c:
   On Windows, convert filetype extensions read from config files
   to lower case (closes #3028856).


2010-07-12  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c:
   Focus toolbar item when pressing Go to Line keybinding only when
   it's not in the toolbar's drop down overflow menu (fixes #3027454).


2010-07-11  Lex Trotman  <elextr(at)gmail(dot)com>

 * src/build.c:
   Fix build menu translation problems.


2010-07-10  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * wscript:
   Fix './waf install'.


2010-07-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c:
   Fix scrolling the editor line in view after loading a session and
   switching document tabs. Note this causes repainting so needs
   improvement.
 * doc/geany.txt, doc/geany.html:
   Add note to restart Geany after installing/updating before editing
   hidden prefs.
 * src/ui_utils.h, src/main.c, src/ui_utils.c:
   Use Stash to save statusbar_template setting, instead of the
   load/save-settings signal.
   Add ui_init_prefs().


2010-07-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/ui_utils.c, doc/geany.txt, doc/geany.html: